--- a/src/components/MenuComponent/MenuComponent.module.css
+++ b/src/components/MenuComponent/MenuComponent.module.css
@@ -14,7 +14,6 @@
     width: 80%;
     margin-bottom: 20px;
     margin-top: 20px;
-    touch-action: none;
     
     transition: 0.5s ease-in-out;
     -webkit-transition: 0.5s ease-in-out;
@@ -38,13 +37,14 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    position: relative;
+    /* position: relative; */
     cursor: pointer;
 }
 
 @media (min-width:768px) {
     .Header-item {
         align-items: baseline;
+        position: relative;
 
         transition: 0.3s;
         -webkit-transition: 0.3s;
