--- a/src/components/Navigation/MenuNavigation/MenuNavigation.module.css
+++ b/src/components/Navigation/MenuNavigation/MenuNavigation.module.css
@@ -5,7 +5,7 @@
     width: 40%;
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1366px) {
     .MenuNavigation-container {
         display: flex;
     }
@@ -14,6 +14,12 @@
 @media (min-width: 1578px) {
     .MenuNavigation-container {
         width: 30%;
+    }
+}
+
+@media (min-width: 1920px) {
+    .MenuNavigation-container {
+        font-size: 1.4em;
     }
 }
 
